# tap-dbf

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: release.yaml  test.yml
tap_dbf/: __init__.py  __main__.py  client.py  tap.py
tests/: __init__.py  test_core.py
