[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-dbf"
description = "Singer tap for DBF files"
readme = "README.md"
keywords = [
  "dBase",
  "dbf",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
]
dynamic = [
  "version",
]
dependencies = [
  "dbfread~=2.0.7",
  "fsspec~=2026.2.0",
  "singer-sdk~=0.54.0a3",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]
[[project.authors]]
name = "Edgar R. Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar R. Mondragón"
email = "edgarrm358@gmail.com"
[project.optional-dependencies]
all = [
  "tap-dbf[gcs,s3]",
]
gcs = [
  "gcsfs~=2026.2.0",
]
s3 = [
  "s3fs~=2026.2.0",
]
[project.scripts]
tap-dbf = "tap_dbf.tap:TapDBF.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-dbf#readme"
Homepage = "https://github.com/reservoir-data/tap-dbf"
Repository = "https://github.com/reservoir-data/tap-dbf"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=7.4",
  "pytest-github-actions-annotate-failures~=0.3.0",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "ty>=0.0.1a23",
  "typing-extensions>=4.7.1; python_version<'3.11'",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"
preview = true

[tool.ruff]
preview = true
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812",
  "CPY",
  "DJ",
  "ISC001",
  "PD",
]
per-file-ignores."tests/*" = [
  "ANN201",
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [
  "tap_dbf",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"
preview = true

[tool.deptry]
[tool.deptry.package_module_name_map]
mypy = "mypy"
[tool.deptry.per_rule_ignores]
DEP002 = [
  "gcsfs",
  "s3fs",
  "tap-dbf",
]
DEP004 = [
  "typing_extensions",
]

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
overrides = [ { ignore_missing_imports = true, module = [
  "dbfread.*",
  "fsspec.*",
] } ]

[tool.pytest]
addopts = [ "-v", "-ra" ]
filterwarnings = [ "error", "once::singer_sdk.helpers._compat.SingerSDKPythonEOLWarning" ]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [ "tox>=4.51", "tox-uv", "tox-gh>=1.6.1" ]
env_list = [
  "dependencies",
  "typing",
  "test",
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.sync]
description = "run tap with sample data"
base_python_file = [ ".python-version" ]
pip_pre = true
set_env = { TAP_DBF_PATH = "tests/data/files/contacts.dbf", TAP_DBF_IGNORE_MISSING_MEMOFILE = "true" }
commands = [ [ "tap-dbf", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
[tool.tox.env.test]
description = "run tests on Python {py_dot_ver}"
base_python_file = [ ".python-version" ]
[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_dbf", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_dbf", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
description = "run tests on Python {py_dot_ver}"
runner = "uv-venv-lock-runner"
pip_pre = true
extras = [ "all" ]
pass_env = [ "TAP_DBF_*" ]
set_env = { PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1" }
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
[tool.tox.gh]
python."3.14" = [ "3.14", "dependencies", "typing" ]
python."3.13" = [ "3.13" ]
python."3.12" = [ "3.12" ]
python."3.11" = [ "3.11" ]
python."3.10" = [ "3.10" ]
